RESOLVED FIXED 215733
Function.prototype.bind should not clamp "length" to int32
https://bugs.webkit.org/show_bug.cgi?id=215733
Summary Function.prototype.bind should not clamp "length" to int32
Alexey Shvayka
Reported 2020-08-21 09:06:47 PDT
Function.prototype.bind should not clamp "length" to int32
Attachments
Patch (12.29 KB, patch)
2020-08-21 11:31 PDT, Alexey Shvayka
no flags
Alexey Shvayka
Comment 1 2020-08-21 11:31:53 PDT
Alexey Shvayka
Comment 2 2020-08-21 11:35:43 PDT
(In reply to Alexey Shvayka from comment #1) > Created attachment 407021 [details] > Patch Warmed-up runs, --outer 50: r265666 patch function-bind-creation 39.9957+-0.5125 ^ 36.5929+-0.4189 ^ definitely 1.0930x faster function-bind-inlining 235.9480+-3.2539 ^ 220.2239+-3.2613 ^ definitely 1.0714x faster function-bind-no-inlining 245.6382+-2.0019 ^ 230.9699+-1.6097 ^ definitely 1.0635x faster function-bind-no-inlining-repeat-call 62.3289+-1.2651 60.8449+-1.2642 might be 1.0244x faster
Alexey Shvayka
Comment 3 2020-08-21 13:36:17 PDT
Comment on attachment 407021 [details] Patch Thanks Darin!
EWS
Comment 4 2020-08-21 13:41:20 PDT
Committed r266013: <https://trac.webkit.org/changeset/266013> All reviewed patches have been landed. Closing bug and clearing flags on attachment 407021 [details].
Radar WebKit Bug Importer
Comment 5 2020-08-21 13:42:16 PDT
Note You need to log in before you can comment on or make changes to this bug.