Function.prototype.bind should not clamp "length" to int32 https://bugs.webkit.org/show_bug.cgi?id=215733

Reviewed by Darin Adler.

JSTests:

* microbenchmarks/function-bind-creation.js: Added.
* test262/expectations.yaml: Mark 4 test cases as passing.

Source/JavaScriptCore:

This patch fixes to integer conversion of target function's "length" values
beyond UINT_MAX, aligning JSC with the spec [1], V8 and SpiderMonkey.

`double` is used instead of `uint64_t` to retain semantics of JS Number type [2]
and hold Infinity values. To avoid spreading `double length` over JSFunction::create()
and its subclasses, JSBoundFunction is modified to use JSFunction::finishCreation(VM&)
overload, removing 2 unused arguments and speeding up bound function creation by ~9%.

[1]: https://tc39.es/ecma262/#sec-function.prototype.bind (step 6.c.i)
[2]: https://tc39.es/ecma262/#sec-ecmascript-language-types-number-type

* builtins/FunctionPrototype.js:
(bind):
* runtime/JSBoundFunction.cpp:
(JSC::JSBoundFunction::create):
(JSC::JSBoundFunction::JSBoundFunction):
(JSC::JSBoundFunction::finishCreation):
* runtime/JSBoundFunction.h:
* runtime/JSFunction.cpp:
(JSC::JSFunction::finishCreation):
(JSC::JSFunction::reifyLength):
* runtime/JSGlobalObject.cpp:
(JSC::makeBoundFunction):


Canonical link: https://commits.webkit.org/228490@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266013 268f45cc-cd09-0410-ab3c-d52691b4dbfc